--- a/src/main/webapp/inicial_arquivos/css/criterioSucesso.css
+++ b/src/main/webapp/inicial_arquivos/css/criterioSucesso.css
@@ -34,7 +34,7 @@
     word-wrap: break-word;
     text-align: left;
     font-size:1.4em; 
-    border: 1px solid #fff;
+    border: 1px solid #ffffff;
 }
 
 .tabelaCriterioSucesso caption{
