--- a/src/main/webapp/inicial_arquivos/css/tabAvaliar.css
+++ b/src/main/webapp/inicial_arquivos/css/tabAvaliar.css
@@ -32,7 +32,7 @@
 		left: 1px;
 	}
 	.contraste .tabAvaliacao label.rariosAvaliacao {
-		background: #000;		
+		background: #000000;		
 		padding: 10px;
 		border: 1px solid #ccc;
 		margin-left: -1px;
@@ -64,7 +64,7 @@
 	}
 	.tabAvaliacao .contenteudoAvaliacao {
 		background-color: #dbe9ba;
-		border: 1px solid #000;
+		border: 1px solid #000000;
 		padding-right: 10px;
 		margin-bottom: 15px;
 		
@@ -72,7 +72,7 @@
 		clear: both;
 	}
 	.contraste .tabAvaliacao .contenteudoAvaliacao {
-		border: 1px solid #fff !important;
+		border: 1px solid #ffffff !important;
 	}
 	.tabAvaliacao {
 		float: left;
