Alteração da cor do background e color dos "span" responsivo.

--- a/src/main/webapp/inicial_arquivos/css/default.css
+++ b/src/main/webapp/inicial_arquivos/css/default.css
@@ -404,15 +404,15 @@
 		font-family: Arial, Helvetica, sans-serif;
 	}
 	#accessibility span {
-		background: #9ed5ab;
-		color: #ffffff;
+		background: #ffffff;
+		color: #327241;
 		padding: 0 4px;
 	}
 	
 	#portal-siteactions span
 	{
-		background: #9ed5ab;
-		color: #ffffff;
+		background: #ffffff;
+		color: #327241;
 		padding: 0 4px;
 	}
 	
