--- a/src/main/webapp/inicial_arquivos/css/contato.css
+++ b/src/main/webapp/inicial_arquivos/css/contato.css
@@ -42,3 +42,11 @@ list-style-type: none;
 	font-size: 14px;	
 	margin-top: 30px;
 }
+
+.contraste .formContato{
+	border-style: solid none none;
+    border-width: 0.1em;
+	font-size: 1.7em; 
+	font-family: Arial, Helvetica, sans-serif;
+	color: #ffffff; 
+}
